<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>PlayerTracker</groupId>
	<artifactId>PlayerTracker</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>PlayerTracker</name>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
		  <groupId>com.dustinredmond.fxtrayicon</groupId>
		  <artifactId>FXTrayIcon</artifactId>
		  <version>3.1.2</version>
		</dependency>
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.9.1</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>${project.name}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>appli.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
						<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>appli.App</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin> 
			<plugin>
          		<groupId>com.akathist.maven.plugins.launch4j</groupId>
          		<artifactId>launch4j-maven-plugin</artifactId>
          		<version>2.1.2</version>
          		<executions>
                	<execution>
                  		<id>l4j-gui</id>
                  		<phase>package</phase>
                  		<goals><goal>launch4j</goal></goals>
                  		<configuration>
		                    <headerType>gui</headerType>
		                    <outfile>target/PlayerTracker.exe</outfile>
		                    <jar>target/PlayerTracker-jar-with-dependencies.jar</jar>
		                    <errTitle>PlayerTracker</errTitle>
		                    <classPath>
                      			<mainClass>appli.App</mainClass>
                    		</classPath>
		                    <jre>
		                      <minVersion>11.0.14</minVersion>
		                    </jre>
		                    <versionInfo>
		                      	<fileVersion>1.0.0.0</fileVersion>
		                      	<txtFileVersion>PlayerTracker</txtFileVersion>
		                      	<fileDescription>Playertracker</fileDescription>
		                      	<copyright>my copyright</copyright>
		                      	<productVersion>1.0.0.0</productVersion>
		                      	<txtProductVersion>txt product version</txtProductVersion>
		                      	<productName>PlayerTracker</productName>
		                      	<internalName>PlayerTracker</internalName>
		                      	<originalFilename>PlayerTracker.exe</originalFilename>
                    		</versionInfo>
                  		</configuration>
                	</execution>
          		</executions>
        	</plugin>
		</plugins>
	</build>
</project>